force-app/main/default/objects/Expense__c/Expense__c.object-meta.xml
<CustomObject>
    <description>For updating TA/DA.</description>
    <label>Expense</label>
    <nameField>
        <displayFormat>EI-{0000}</displayFormat>
        <label>Expense ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>