force-app/main/default/objects/Expense__c/fields/Other_Expense__c.field-meta.xml
<CustomField>
    <fullName>Other_Expense__c</fullName>
    <label>Other Expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>