force-app/main/default/objects/Expense__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>CASE( Approval_Status__c ,&quot;approved&quot;,
IMAGE(&quot;https://fingertiptechnologies-dev-ed--c.visualforce.com/resource/1652855910000/Approved&quot;,&quot;approved&quot;),
&quot;pending&quot;, IMAGE(&quot;https://fingertiptechnologies-dev-ed--c.visualforce.com/resource/1652855880000/Pending&quot;,
&quot;pending&quot;),
&quot;rejected&quot;, IMAGE(&quot;https://fingertiptechnologies-dev-ed--c.visualforce.com/resource/1652855850000/Rejected&quot;,
&quot;rejected&quot;),IMAGE(&quot;https://fingertiptechnologies-dev-ed--c.visualforce.com/resource/1652855804000/Submitted&quot;,
&quot;submitted&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>