force-app/main/default/objects/Expense__c/fields/TA__c.field-meta.xml
<CustomField>
    <fullName>TA__c</fullName>
    <label>TA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>