force-app/main/default/objects/Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approval_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Total_Expense__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>